--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,36 +1,104 @@
 .footer {
 	display: grid;
+	grid-template-columns: min-content 1fr 1fr 2fr;
+	column-gap: 20rem;
 
 	max-width: 144rem;
 	margin: 0 auto;
 	padding-top: 10rem;
 	padding-bottom: 10rem;
 
+	align-items: center;
+
+	&__icons {
+	}
+
 	&__logo {
 		height: 2.5rem;
 	}
 
-	&__links {
-		list-style-type: none;
+	// &__links {
+	// 	grid-row: 1 / 5;
+	// 	list-style-type: none;
 
-		&--link {
-			font-size: $default-font-size;
-			font-weight: $font-regular;
-			text-decoration: none;
-			color: #fff;
+	// 	&--1 {
+	// 		grid-column: 2 / 3;
+	// 	}
+
+	// 	&--2 {
+	// 		grid-row: 1 / 4;
+	// 		grid-column: 3 / 4;
+	// 	}
+
+	// }
+
+	&__link {
+		font-size: $default-font-size;
+		font-weight: $font-regular;
+		text-decoration: none;
+		color: #fff;
+
+		padding: 1.5rem 0;
+
+		&--home {
+			grid-column: 2 / 3;
+		}
+
+		&--pricing {
+			grid-column: 2 / 3;
+		}
+
+		&--products {
+			grid-column: 2 / 3;
+		}
+
+		&--about {
+			grid-column: 2 / 3;
+		}
+
+		&--careers {
+			grid-column: 3 / 4;
+			grid-row: 1 / 2;
+		}
+
+		&--community {
+			grid-column: 3 / 4;
+			grid-row: 2 / 3;
+		}
+
+		&--privacy {
+			grid-column: 3 / 4;
+			grid-row: 3 / 4;
 		}
 	}
 
 	&__subscription {
-		&--input {
-		}
+		display: flex;
+		justify-content: space-between;
+		grid-row: 1 / 1;
+		grid-column: 4 / 5;
 
-		&--button {
+		&--input {
+			font-family: $default-font;
+			font-size: 1.4rem;
+			color: $color-primary;
+			padding: 1.8rem 3rem;
+			border: none;
+			border-radius: 4rem;
+
+			&:focus-visible {
+				outline-color: $color-primary;
+				outline-offset: 1px;
+			}
 		}
 	}
 
 	&__copyright {
+		grid-column: 4 / 5;
+		grid-row: 4 / 5;
 		color: $color-gray--400;
 		font-size: 1.4rem;
+
+		justify-self: self-end;
 	}
 }
